fix positioning with visible menu

--- a/src/plugins/header-box.less
+++ b/src/plugins/header-box.less
@@ -18,7 +18,11 @@
     }
   }
 
-  body {
+  body when not (@enable-submenu-fade) {
+    padding-top: @header-box-height + 28px;
+  }
+
+  body when (@enable-submenu-fade) {
     padding-top: @header-box-height + 8px;
   }
 
@@ -26,7 +30,14 @@
     display: block;
     left: 0;
     right: 0;
-    top: 38px;
+
+    & when (@enable-submenu-fade) {
+      top: 38px;
+    }
+    & when not (@enable-submenu-fade) {
+      top: 58px;
+    }
+
     font-weight: 700;
     text-align: center;
     font-size: @font-bigger;
